--- a/index.html
+++ b/index.html
@@ -4,12 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jiwuu</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <nav>
-        <div class="logo">
+    <header>
+        <nav class="nav">
+        <div class="right-side">
             <i class="fa-solid fa-code"></i>
+            <p>Home</p>
+            <p>About</p>
         </div>
     </nav>
+    </header>
+    <main>
+        <section>
+
+        <div>
+            <h1>Jiwuu</h1>
+            <p>I am a college student at PHINMA University of Pangasinan currently taking the course BSIT (Bachelor of Science In Information Technology) and this is my first portfolio. :D</p>
+        </div>
+        <div class="profile-picture">
+            <img src="https://media.licdn.com/dms/image/D4E03AQEe8SOp895MGA/profile-displayphoto-shrink_800_800/0/1692339694062?e=1711584000&v=beta&t=11Ze2ytoFmvwbvg--UrcGGhaH0qeGmbp7cqWbC_BAm0" alt="profile-image">
+        </div>
+        <div>
+            <div>
+                <p></p>
+            </div>
+            <div>
+                <p></p>
+            </div>
+            <div>
+                <p></p>
+            </div>
+        </div>
+        <div>
+            <a>
+                <p>Email Me</p>
+            </a>
+        </div>
+        </section>
+        <section>
+            <p>Latest Project</p>
+        </section>
+    </main>
+    
 </body>
 </html>
